<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AppLogin">

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="152dp"
        android:src="@drawable/ic_baseline_assignment_ind_24"
        android:layout_marginLeft="135dp" />

    <TextView
        android:id="@+id/apploginName"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/apploginSignupLink"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        />


    <EditText
        android:id="@+id/app_login_EditTextEmail"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="55dp"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/apploginEditTextPassword"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enterpassword"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/apploginEditTextForgetPass"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="270dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPassword"
        android:layout_marginStart="270dp" />

    <Button
        android:id="@+id/apploginButton"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="460dp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    
    <ProgressBar
        android:id="@+id/apploginProgressBar"
        android:layout_marginBottom ="90dp"
        android:layout_marginLeft="150dp"
        android:layout_gravity="bottom"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</FrameLayout>